--- a/frontend/src/pages/Dashboard/styles.css
+++ b/frontend/src/pages/Dashboard/styles.css
@@ -29,3 +29,31 @@ ul.spot-list li span {
     font-size: 15px;
     color: #999;
 }
+
+ul.notifications {
+    list-style: none;
+    margin-bottom: 15px;
+}
+
+ul.notifications li {
+    font-size: 16px;
+    line-height: 24px;
+}
+
+ul.notifications li button {
+    margin-right: 10px;
+    border: 0;
+    font-weight: bold;
+    margin-top: 10px;
+    border-radius: 5px;
+    padding: 2px;
+    cursor: pointer;
+}
+
+ul.notifications li button.accepts {
+    color: #84c870;
+}
+
+ul.notifications li button.reject {
+    color: #E55E5E;
+}
